[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/welcome.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Rowdies-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/loaphuong_logo.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Alata-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.2556, 0.71, 0.52824, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.1026, 0.54, 0.34317, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.1116, 0.62, 0.39122, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.929412, 0.6, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.72, 0.363, 0.108, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.4265, 0.07, 1 )

[sub_resource type="DynamicFont" id=9]
size = 13
font_data = ExtResource( 4 )

[node name="welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.840881
margin_right = -0.840881
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="network_id" type="Label" parent="."]
margin_left = 13.0
margin_top = 11.0
margin_right = 155.0
margin_bottom = 25.0

[node name="partner_id" type="LineEdit" parent="."]
margin_left = 11.0
margin_top = 343.242
margin_right = 346.0
margin_bottom = 367.242
custom_fonts/font = SubResource( 1 )
placeholder_text = "ID phòng chơi bạn muốn tham gia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="."]
margin_left = 15.119
margin_top = 377.992
margin_right = 173.119
margin_bottom = 403.992
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.84, 1, 0.928, 1 )
text = "tạo phòng"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 184.689
margin_top = 377.992
margin_right = 342.689
margin_bottom = 403.992
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.39, 0.16874, 0.0312, 1 )
custom_colors/font_color_hover = Color( 0.7, 0.41335, 0.063, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.168627, 0.0313726, 1 )
text = "vào phòng"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_label" type="Label" parent="."]
margin_left = 12.5992
margin_top = 323.274
margin_right = 52.5992
margin_bottom = 337.274
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.678431, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 180, 220.486 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
[connection signal="focus_entered" from="partner_id" to="." method="_on_partner_id_focus_entered"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
